--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -23,15 +23,15 @@
 
 	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
-		<meta name="og:title" Content="@titulo" />
+		<meta name="og:title" content="@titulo" />
 		<meta name="description" content="@descripcion" />
 		<meta name="og:description" content="@descripcion" />
 		<meta name="og:url" content="@enlace" />
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, nofollow, noimageindex" />
-		<meta name="keywords" content="deals, games, free, offers, bundles" />
+		<meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
+		<meta name="keywords" content="deals, games, offers, historical, lows" />
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
