--- a/pepeizqs deals web/Pages/Componentes/Secciones/RSS.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/RSS.razor
@@ -16,7 +16,7 @@
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
 		<meta name="robots" content="index, nofollow, noimageindex" />
-		<meta name="keywords" content="deals, games, free, offers, bundles" />
+		<meta name="keywords" content="deals, games, free, offers, bundles, noai, noimageai" />
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
