--- a/pepeizqs deals web/Pages/bundle.cshtml
+++ b/pepeizqs deals web/Pages/bundle.cshtml
@@ -49,5 +49,5 @@
 		}
 	}
 
-	<component type="typeof(Componentes.Secciones.Bundle)" render-mode="Server" param-idioma="idioma" param-bundleId="Model.bundle.Id" param-usuarioId="usuario?.Id" />
+	<component type="typeof(Componentes.Secciones.Bundle)" render-mode="ServerPrerendered" param-idioma="idioma" param-bundleId="Model.bundle.Id" param-usuarioId="usuario?.Id" />
 }
