--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -15,22 +15,34 @@
 	string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "Subtitle", "Bundle");
 	string enlace = "https://pepeizqdeals.com/bundles/";
 	string imagen = string.Empty;
+	string keywords = "bundles";
 
-	if (bundlesActuales.Count > 0)
+	if (bundlesActuales != null)
 	{
-		if (bundlesActuales.Count == 1)
+		if (bundlesActuales.Count > 0)
 		{
-			titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String16", "Bundle"), bundlesActuales.Count.ToString());
+			if (bundlesActuales.Count == 1)
+			{
+				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String16", "Bundle"), bundlesActuales.Count.ToString());
+			}
+			else if (bundlesActuales.Count > 1)
+			{
+				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String17", "Bundle"), bundlesActuales.Count.ToString());
+			}
+
+			foreach (var bundleActual in bundlesActuales)
+			{
+				if (keywords.Contains(bundleActual.NombreTienda.ToLower()) == false)
+				{
+					keywords = keywords + ", " + bundleActual.NombreTienda.ToLower();
+				}
+			}
 		}
-		else if (bundlesActuales.Count > 1)
+		else if (bundlesActuales.Count == 0)
 		{
-			titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String17", "Bundle"), bundlesActuales.Count.ToString());
+			titulo = Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Bundle");
 		}
-	}
-	else if (bundlesActuales.Count == 0)
-	{
-		titulo = Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Bundle");
-	}
+	}	
 
     titulo = titulo + " • pepeizq's deals";
 
@@ -43,8 +55,8 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, follow, noimageindex" />
-		<meta name="keywords" content="deals, games, free, offers, bundles" />
+		<meta name="robots" content="index, follow, noimageindex, noai, noimageai" />
+		<meta name="keywords" content="@keywords" />
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
@@ -72,87 +84,91 @@
 	}
 </style>
 
-@if (bundlesActuales.Count > 0)
+@if (bundlesActuales != null)
 {
-	@if (mostrarBundleSeleccionado == false)
+	if (bundlesActuales.Count > 0)
 	{
-		<h1 style="font-size: 23px;">
-			@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Bundle")
-		</h1>
-
-		<hr>
-
-		<div class="bundles-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; justify-items: center; margin-bottom: 70px; background-color: var(--fondoMinimo); border: 2px solid var(--fondoBotonPequeño); padding: 30px;">
-			@foreach (var bundle in bundlesActuales)
-			{
-				<button @onclick="@(e => SeleccionarBundle(e, bundle))" class="boton-pequeño" style="padding: 0px;">
-					<div style="width: 100%; text-align: center; padding: 2px;">
-						@if (bundle.Tipo == Bundles2.BundleTipo.HumbleBundle)
-						{
-							<img src="@bundle.ImagenNoticia" style="max-width: 100%;" alt="@bundle.NombreBundle" />
-						}
-						else
-						{
-							<img src="@bundle.ImagenBundle" style="max-width: 100%;" alt="@bundle.NombreBundle" />
-						}
-
-						<div style="margin-top: 10px; margin-bottom: 5px; text-align: center;">
-							@MostrarFecha(bundle.FechaEmpieza, bundle.FechaTermina)
-						</div>
-					</div>
-				</button>
-			}
-		</div>
-	}
-	else
-	{
-		@if (bundleSeleccionado != null)
+		if (mostrarBundleSeleccionado == false)
 		{
-			<div style="margin-bottom: 40px; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3; overflow: hidden;">
-				<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px 30px; display: flex; align-items: center; flex-direction: row;">
-					<button @onclick="@(e => CerrarBundle(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
-						<div style="max-width: 24px; max-height: 24px;">
-							<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-								<path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
-							</svg>
+			<h1 style="font-size: 23px;">
+				@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Bundle")
+			</h1>
+
+			<hr>
+
+			<div class="bundles-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; justify-items: center; margin-bottom: 70px; background-color: var(--fondoMinimo); border: 2px solid var(--fondoBotonPequeño); padding: 30px;">
+				@foreach (var bundle in bundlesActuales)
+				{
+					<button @onclick="@(e => SeleccionarBundle(e, bundle))" class="boton-pequeño" style="padding: 0px;">
+						<div style="width: 100%; text-align: center; padding: 2px;">
+							@if (bundle.Tipo == Bundles2.BundleTipo.HumbleBundle)
+							{
+								<img src="@bundle.ImagenNoticia" style="max-width: 100%;" alt="@bundle.NombreBundle" />
+							}
+							else
+							{
+								<img src="@bundle.ImagenBundle" style="max-width: 100%;" alt="@bundle.NombreBundle" />
+							}
+
+							<div style="margin-top: 10px; margin-bottom: 5px; text-align: center;">
+								@MostrarFecha(bundle.FechaEmpieza, bundle.FechaTermina)
+							</div>
 						</div>
 					</button>
+				}		
+			</div>
+		}
+		else
+		{
+			@if (bundleSeleccionado != null)
+			{
+							<div style="margin-bottom: 40px; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3; overflow: hidden;">
+								<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px 30px; display: flex; align-items: center; flex-direction: row;">
+									<button @onclick="@(e => CerrarBundle(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
+										<div style="max-width: 24px; max-height: 24px;">
+											<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+												<path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+											</svg>
+										</div>
+									</button>
 
-					<div style="display: flex; align-items: center; flex-direction: row;">
-						<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo, usuarioPatreon)" style="width: auto;" target="_blank">
-							<div style="height: 60px; padding-left: 40px; padding-right: 20px;">
-								<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleSeleccionado.Tipo).ImagenTienda" style="height: 100%;" alt="@bundleSeleccionado.NombreBundle" />
-							</div>
-						</a>
+									<div style="display: flex; align-items: center; flex-direction: row;">
+										<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo, usuarioPatreon)" style="width: auto;" target="_blank">
+											<div style="height: 60px; padding-left: 40px; padding-right: 20px;">
+												<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleSeleccionado.Tipo).ImagenTienda" style="height: 100%;" alt="@bundleSeleccionado.NombreBundle" />
+											</div>
+										</a>
 
-						<div style="padding-left: 20px; padding-right: 20px;">
-							<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo, usuarioPatreon)" class="boton-pequeño" style="background-color: transparent; padding: 0px; font-size: 20px; margin-bottom: 10px;" target="_blank">
-								@bundleSeleccionado.NombreBundle
-							</a>
+										<div style="padding-left: 20px; padding-right: 20px;">
+											<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo, usuarioPatreon)" class="boton-pequeño" style="background-color: transparent; padding: 0px; font-size: 20px; margin-bottom: 10px;" target="_blank">
+												@bundleSeleccionado.NombreBundle
+											</a>
 
-							<div style="display: flex; align-items: center; gap: 20px; flex-direction: row; font-size: 14px;">
-								<a href="/bundle/@bundleSeleccionado.Id/@Herramientas.EnlaceAdaptador.Nombre(bundleSeleccionado.NombreBundle)/" class="boton-pequeño" style="padding: 0px; width: fit-content; background-color: transparent;">
-									<div style="max-width: 20px; max-height: 20px;">
-										<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
-											<path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z" />
-										</svg>
+											<div style="display: flex; align-items: center; gap: 20px; flex-direction: row; font-size: 14px;">
+												<a href="/bundle/@bundleSeleccionado.Id/@Herramientas.EnlaceAdaptador.Nombre(bundleSeleccionado.NombreBundle)/" class="boton-pequeño" style="padding: 0px; width: fit-content; background-color: transparent;">
+													<div style="max-width: 20px; max-height: 20px;">
+														<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+															<path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z" />
+														</svg>
+													</div>
+												</a>
+
+												@MostrarFecha(bundleSeleccionado.FechaEmpieza, bundleSeleccionado.FechaTermina)
+											</div>
+										</div>
 									</div>
+								</div>
+
+								<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo, usuarioPatreon)" class="boton-pequeño" style="text-align: center; padding: 10px 15px; font-size: 18px;" target="_blank">
+									@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Bundle")
 								</a>
+							</div>		
 
-								@MostrarFecha(bundleSeleccionado.FechaEmpieza, bundleSeleccionado.FechaTermina)
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo, usuarioPatreon)" class="boton-pequeño" style="text-align: center; padding: 10px 15px; font-size: 18px;" target="_blank">
-					@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Bundle")
-				</a>
-			</div>		
-
-			<Bundle bundleId="@bundleSeleccionado.Id" idioma="@idioma" usuarioId="@usuarioId" tipo="@Bundle.Tipo.Bundles" />
+							<Bundle bundleId="@bundleSeleccionado.Id" idioma="@idioma" usuarioId="@usuarioId" tipo="@Bundle.Tipo.Bundles" />
+			}
 		}
 	}
+
 }
 
 @if (mostrarBundleSeleccionado == false)
@@ -290,11 +306,14 @@
 
 	protected override async Task OnInitializedAsync()
 	{
-		usuario = await UserManager.FindByIdAsync(usuarioId);
-
-		if (usuario != null)
+		if (string.IsNullOrEmpty(usuarioId) == false)
 		{
-			usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
+			usuario = await UserManager.FindByIdAsync(usuarioId);
+
+			if (usuario != null)
+			{
+				usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
+			}
 		}
 
 		//--------------------------------------------------------------------
@@ -317,13 +336,14 @@
 
 		//--------------------------------------------------------------------
 
-		bundlesActuales = BaseDatos.Bundles.Buscar.Actuales();
+		if (bundlesActuales.Count == 0)
+		{
+			bundlesActuales = BaseDatos.Bundles.Buscar.Actuales();
+		}
 
 		if (bundlesActuales.Count > 0)
 		{
 			bundleSeleccionado = bundlesActuales[0];
-
-			bundlesActuales = bundlesActuales.OrderBy(x => x.FechaTermina).ToList();
 		}
 	}
 
