--- a/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
@@ -24,6 +24,20 @@
 		imagen = curator.Imagen;
 	}
 
+	string[] keywordsEnBruto = Herramientas.Buscador.LimpiarNombre(curator.Nombre, false).Split(' ');
+	List<string> keywordsLista = new List<string>();
+	keywordsLista.AddRange(keywordsEnBruto);
+
+	string keywords = "curator";
+
+	foreach (string keyword in keywordsLista)
+	{
+		if (keyword.Length > 3)
+		{
+			keywords = keywords + ", " + keyword;
+		}
+	}
+
 	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" Content="@titulo" />
@@ -33,8 +47,8 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, nofollow, noimageindex" />
-		<meta name="keywords" content="deals, games, free, offers, bundles" />
+		<meta name="robots" content="index, follow, noimageindex, noai, noimageai" />
+		<meta name="keywords" content="@keywords" />
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
